# snap.design

./: .gitignore  package-lock.json  package.json  turbo.json
app/: globals.css  layout.tsx  page.tsx
app/[id]/: page.tsx
apps/desktop/: index.html  package.json  tsconfig.node.json
apps/desktop/src/: App.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: db.rs  extractor.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/extractor/: colors.rs  mod.rs  radii.rs  shadows.rs  spacing.rs  typography.rs  utils.rs
apps/desktop/src/lib/: reports-store.test.ts  reports-store.ts
apps/desktop/src/pages/: Gallery.tsx  ReportDetail.tsx
apps/web/: intro.md  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/[id]/: page.tsx
apps/web/components/detail/: DetailTabs.tsx  DocViewer.tsx
apps/web/components/filters/: FilterBar.tsx  SortBar.tsx
apps/web/components/gallery/: DesignCard.tsx  GalleryGrid.tsx
apps/web/components/hero/: Hero.tsx
apps/web/components/navigation/: Navbar.tsx
apps/web/components/ui/: Button.tsx
apps/web/data/: designs.ts
apps/web/scripts/: generate-screenshots.ts
components/detail/: DocViewer.tsx  PreviewPanel.tsx
components/filters/: FilterBar.tsx  SortBar.tsx
components/gallery/: DesignCard.tsx  GalleryGrid.tsx
components/hero/: Hero.tsx
components/navigation/: Navbar.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
data/: designs.ts
scripts/: generate-screenshots.ts
types/: design.ts
