[package]
name = "snap-design"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
